--- a/build.gradle
+++ b/build.gradle
@@ -72,11 +72,13 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 21
 }
 
+
 java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
+	withJavadocJar()
 
 	sourceCompatibility = JavaVersion.VERSION_21
 	targetCompatibility = JavaVersion.VERSION_21
