--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ repositories {
 
 modrinth {
 	token = System.getenv("MODRINTH_TOKEN") // Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
-	projectId = "modularity" // This can be the project ID or the slug. Either will work!
-	versionNumber = "1.0.0-ALPHA-1.21" // You don't need to set this manually. Will fail if Modrinth has this version already
+	projectId = "U1fuCfwF" // This can be the project ID or the slug. Either will work!
+	versionNumber = "1.0.1-ALPHA-1.21" // You don't need to set this manually. Will fail if Modrinth has this version already
 	versionType = "alpha" // This is the default -- can also be `beta` or `alpha`
 	uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
 	gameVersions = ["1.21"] // Must be an array, even with only one version
