--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ group = project.maven_group
 base {
 	archivesName = project.archives_base_name
 }
-
 repositories {
 	maven { url "api.modrinth.com/maven" }
 	maven { url "https://maven.shedaniel.me/" }
@@ -25,9 +24,10 @@ repositories {
 modrinth {
 	token = System.getenv("MODRINTH_TOKEN") // Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
 	projectId = "U1fuCfwF" // This can be the project ID or the slug. Either will work!
-	versionNumber = "1.0.1-ALPHA-1.21" // You don't need to set this manually. Will fail if Modrinth has this version already
+	versionNumber = mod_version // You don't need to set this manually. Will fail if Modrinth has this version already
 	versionType = "alpha" // This is the default -- can also be `beta` or `alpha`
 	uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
+	additionalFiles = [file("build/libs/modularity-"+mod_version+"-javadoc.jar"),file("build/libs/modularity-"+mod_version+"-sources.jar")]
 	gameVersions = ["1.21"] // Must be an array, even with only one version
 	loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
 	dependencies { // A special DSL for creating dependencies
